Point light implementation & cmake build shader code automatically

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.15)
 project(huiEngine)
 
 find_package(Vulkan REQUIRED)
+find_program(glslangValidator_exe NAMES glslangValidator HINTS "$ENV{VULKAN_SDK}/bin")
+message(STATUS "glslangValidator path: ${glslangValidator_exe}")
 
 # specify the C++ standard
 add_library(cpp_compiler_flags INTERFACE)
@@ -24,6 +26,39 @@ add_subdirectory(deps/glm)
 add_subdirectory(deps/tinyobjloader)
 add_subdirectory(deps/stb)
 
+# Shaders
+set(SHADER_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/shaders)
+set(SHADER_BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/shaders)
+
+file(GLOB SHADERS
+  ${SHADER_SOURCE_DIR}/*.vert
+  ${SHADER_SOURCE_DIR}/*.frag
+  ${SHADER_SOURCE_DIR}/*.comp
+  ${SHADER_SOURCE_DIR}/*.geom
+  ${SHADER_SOURCE_DIR}/*.tesc
+  ${SHADER_SOURCE_DIR}/*.tese
+  ${SHADER_SOURCE_DIR}/*.mesh
+  ${SHADER_SOURCE_DIR}/*.task
+  ${SHADER_SOURCE_DIR}/*.rgen
+  ${SHADER_SOURCE_DIR}/*.rchit
+  ${SHADER_SOURCE_DIR}/*.rmiss)
+
+foreach(source IN LISTS SHADERS)
+  get_filename_component(FILENAME ${source} NAME)
+  add_custom_command(
+    COMMAND
+      ${glslangValidator_exe}
+      -o ${SHADER_BINARY_DIR}/${FILENAME}.spv
+      -V ${source}
+    OUTPUT ${SHADER_BINARY_DIR}/${FILENAME}.spv
+    DEPENDS ${source} #${SHADER_BINARY_DIR}
+    COMMENT "Compiling ${FILENAME}"
+  )
+  list(APPEND SPV_SHADERS ${SHADER_BINARY_DIR}/${FILENAME}.spv)
+endforeach()
+
+add_custom_target(shaders ALL DEPENDS ${SPV_SHADERS} SOURCES ${SHADERS})
+
 # Header/Source files
 file( GLOB ALL_HEADER_FILES "*.hpp")
 file( GLOB ALL_SOURCE_FILES "*.cpp")
@@ -31,6 +66,9 @@ source_group( "Header Files" FILES ${ALL_HEADER_FILES} )
 source_group( "Source Files" FILES ${ALL_SOURCE_FILES} )
 
 add_executable(${PROJECT_NAME} ${ALL_SOURCE_FILES} ${ALL_HEADER_FILES})
+# Ensure shaders build first
+add_dependencies(${PROJECT_NAME} shaders)
+
 
 target_link_libraries(${PROJECT_NAME} PUBLIC cpp_compiler_flags stb tinyobjloader)
 
